--- a/service-admin/src/main/resources/application-prod.properties
+++ b/service-admin/src/main/resources/application-prod.properties
@@ -29,7 +29,7 @@ spring.redis.host=localhost
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=zyark*308
+spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -44,7 +44,7 @@ spring.redis.timeout=0
 ##################### dubbo ###############################
 ## Dubbo 服务提供者配置
 spring.dubbo.application.name=service-admin
-spring.dubbo.registry.address=zookeeper://10.0.0.240:2181
+spring.dubbo.registry.address=zookeeper://127.0.01:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.seasonsfood.mall.admin.service.impl
