--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 
         <!--营销工具-折扣活动-->
         <module>web-marketing</module>
+        <module>web-map</module>
+        <module>service-map</module>
+        <module>service-map-api</module>
+
 
 
     </modules>
@@ -107,15 +111,15 @@
         <web-shop-admin.version>1.0.0-SNAPSHOT</web-shop-admin.version>
         <web-portal.version>1.0.0-SNAPSHOT</web-portal.version>
         <web-marketing.version>1.0.0-SNAPSHOT</web-marketing.version>
-
+        <web-map.version>1.0.0-SNAPSHOT</web-map.version>
         <!--api-->
         <service-admin-api.version>1.0.0-SNAPSHOT</service-admin-api.version>
         <service-business-api.version>1.0.0-SNAPSHOT</service-business-api.version>
         <service-delivery-api.version>1.0.0-SNAPSHOT</service-delivery-api.version>
         <service-font-user-api.version>1.0.0-SNAPSHOT</service-font-user-api.version>
         <service-reporter-api.version>1.0.0-SNAPSHOT</service-reporter-api.version>
+        <service-map-api.version>1.0.0-SNAPSHOT</service-map-api.version>
         <!--营销工具-折扣活动api-->
-        <service-marketing-discount-api.version>1.0.0-SNAPSHOT</service-marketing-discount-api.version>
         <service-marketing.version>1.0.0-SNAPSHOT</service-marketing.version>
 
 
@@ -125,9 +129,11 @@
         <service-delivery.version>1.0.0-SNAPSHOT</service-delivery.version>
         <service-font-user.version>1.0.0-SNAPSHOT</service-font-user.version>
         <service-reporter.version>1.0.0-SNAPSHOT</service-reporter.version>
+        <service-map.version>1.0.0-SNAPSHOT</service-map.version>
+
         <!---营销工具-折扣活动-->
         <service-marketing-discount.version>1.0.0-SNAPSHOT</service-marketing-discount.version>
-       <service-marketing-api.version>1.0.0-SNAPSHOT</service-marketing-api.version>
+        <service-marketing-api.version>1.0.0-SNAPSHOT</service-marketing-api.version>
 
         <!-- mysql -->
         <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
@@ -214,6 +220,32 @@
 
         <dependencies>
             <!--common-->
+            <dependency>
+                <groupId>com.seasonsfood.mall</groupId>
+                <artifactId>web-map</artifactId>
+                <version>${web-map.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.seasonsfood.mall</groupId>
+                <artifactId>service-map</artifactId>
+                <version>${service-map.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.seasonsfood.mall</groupId>
+                <artifactId>service-map-api</artifactId>
+                <version>${service-map-api.version}</version>
+            </dependency>
+
+
+
+
+
+
+
+
+
+
+
 
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
@@ -248,15 +280,11 @@
             </dependency>
 
 
-
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
                 <artifactId>service-marketing-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
-
-
-
 
 
             <!--service api-->
@@ -415,7 +443,6 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
             </dependency>
-
 
 
             <!--durid-->
@@ -584,12 +611,9 @@
             </dependency>
 
 
-
         </dependencies>
 
     </dependencyManagement>
-
-
 
 
     <build>
