--- a/common-config/src/main/resources/application-datasource-dev.properties
+++ b/common-config/src/main/resources/application-datasource-dev.properties
@@ -3,9 +3,9 @@
 
 
 # \u8FD94\u4E2A\u53C2\u6570key\u91CC\u4E0D\u5E26druid\u4E5F\u53EF\u4EE5\uFF0C\u5373\u53EF\u4EE5\u8FD8\u7528\u4E0A\u9762\u7684\u8FD9\u4E2A4\u4E2A\u53C2\u6570
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://192.168.1.126:8864/seasons_food_platform?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
+spring.datasource.druid.password=siji9696
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 
 # \u521D\u59CB\u5316\u65F6\u5EFA\u7ACB\u7269\u7406\u8FDE\u63A5\u7684\u4E2A\u6570
