--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
     <groupId>com.seasonsfood.mall</groupId>
     <artifactId>seasons-food-platform</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
     <packaging>pom</packaging>
 
     <name>seasons-food-platform</name>
@@ -31,27 +37,23 @@
         <module>./service-business-api</module>
         <module>./service-reporter-api</module>
         <module>./service-font-user-api</module>
-
+        <module>./service-map-api</module>
         <!--service-->
         <module>./service-admin</module>
         <module>./service-delivery</module>
         <module>./service-business</module>
         <module>./service-reporter</module>
         <module>./service-font-user</module>
-
+        <module>./service-map</module>
         <!--web-->
         <module>./web-all-admin</module>
         <module>./web-delivery-admin</module>
         <module>./web-portal</module>
         <module>./web-shop-admin</module>
-
+        <module>./web-map</module>
 
         <!--营销工具-折扣活动-->
         <module>web-marketing</module>
-        <module>web-map</module>
-        <module>service-map</module>
-        <module>service-map-api</module>
-
 
 
     </modules>
@@ -130,9 +132,8 @@
         <service-font-user.version>1.0.0-SNAPSHOT</service-font-user.version>
         <service-reporter.version>1.0.0-SNAPSHOT</service-reporter.version>
         <service-map.version>1.0.0-SNAPSHOT</service-map.version>
-
         <!---营销工具-折扣活动-->
-        <service-marketing-discount.version>1.0.0-SNAPSHOT</service-marketing-discount.version>
+
         <service-marketing-api.version>1.0.0-SNAPSHOT</service-marketing-api.version>
 
         <!-- mysql -->
@@ -220,32 +221,6 @@
 
         <dependencies>
             <!--common-->
-            <dependency>
-                <groupId>com.seasonsfood.mall</groupId>
-                <artifactId>web-map</artifactId>
-                <version>${web-map.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.seasonsfood.mall</groupId>
-                <artifactId>service-map</artifactId>
-                <version>${service-map.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.seasonsfood.mall</groupId>
-                <artifactId>service-map-api</artifactId>
-                <version>${service-map-api.version}</version>
-            </dependency>
-
-
-
-
-
-
-
-
-
-
-
 
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
@@ -265,20 +240,29 @@
                 <version>${common-core.version}</version>
             </dependency>
 
-
-            <!--营销工具-折扣活动api-->
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
-                <artifactId>service-marketing-discount-api</artifactId>
-                <version>${service-marketing-discount-api.version}</version>
+                <artifactId>web-map</artifactId>
+                <version>${web-map.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.seasonsfood.mall</groupId>
+                <artifactId>service-map-api</artifactId>
+                <version>${service-map-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.seasonsfood.mall</groupId>
+                <artifactId>service-map</artifactId>
+                <version>${service-map.version}</version>
+            </dependency>
+            <!--营销工具-折扣活动api-->
+
 
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
                 <artifactId>web-marketing</artifactId>
                 <version>${web-marketing.version}</version>
             </dependency>
-
 
             <dependency>
                 <groupId>com.seasonsfood.mall</groupId>
