--- a/service-map-api/pom.xml
+++ b/service-map-api/pom.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>seasons-food-platform</artifactId>
-        <groupId>com.seasonsfood.mall</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.seasonsfood.mall</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <artifactId>service-map-api</artifactId>
+	<parent>
+		<groupId>com.seasonsfood.mall</groupId>
+		<artifactId>seasons-food-platform</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
+	<groupId>com.seasonsfood.mall</groupId>
+	<artifactId>service-map-api</artifactId>
+	<packaging>jar</packaging>
 
-    <name>service-map-api</name>
-    <description>service map api</description>
+	<name>service-map-api</name>
+	<description>map api model</description>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.seasonsfood.mall</groupId>
+			<artifactId>common-core</artifactId>
+		</dependency>
+	</dependencies>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.seasonsfood.mall</groupId>
-            <artifactId>common-core</artifactId>
-        </dependency>
-    </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
