--- a/service-map/pom.xml
+++ b/service-map/pom.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>seasons-food-platform</artifactId>
-        <groupId>com.seasonsfood.mall</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.seasonsfood.mall</groupId>
+    <artifactId>service-map</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <artifactId>service-map</artifactId>
-
 
     <name>service-map</name>
-    <description>service map</description>
+    <description>service map </description>
 
+    <parent>
+        <groupId>com.seasonsfood.mall</groupId>
+        <artifactId>seasons-food-platform</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,25 +24,24 @@
         <java.version>1.8</java.version>
     </properties>
 
-
     <dependencies>
 
-    <!--common core-->
-    <dependency>
-        <groupId>com.seasonsfood.mall</groupId>
-        <artifactId>common-core</artifactId>
-    </dependency>
+        <!--common core-->
+        <dependency>
+            <groupId>com.seasonsfood.mall</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+
+        <!--service map api-->
+        <dependency>
+            <groupId>com.seasonsfood.mall</groupId>
+            <artifactId>service-map-api</artifactId>
+        </dependency>
 
         <!--mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!--mapper-->
@@ -71,22 +68,12 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
-        <!--test-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
-        <dependency>
-            <groupId>com.seasonsfood.mall</groupId>
-            <artifactId>service-map-api</artifactId>
-        </dependency>
+        <!--test-->
+
+
 
     </dependencies>
+
+
 </project>
