--- a/service-business/pom.xml
+++ b/service-business/pom.xml
@@ -95,30 +95,30 @@
 
 
         <!--lcn-->
-        <dependency>
-            <groupId>com.codingapi</groupId>
-            <artifactId>tx-client</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>tx-client</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.codingapi</groupId>
-            <artifactId>tx-plugins-db</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>tx-plugins-db</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.codingapi</groupId>
-            <artifactId>transaction-dubbo</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>transaction-dubbo</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.codingapi</groupId>
-            <artifactId>transaction-motan</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>transaction-motan</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.codingapi</groupId>
-            <artifactId>transaction-springcloud</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>transaction-springcloud</artifactId>
+        </dependency>-->
 
     </dependencies>
 
