--- a/service-map/src/main/resources/application-dev.properties
+++ b/service-map/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 server.port=10008
 
 ##################### mybatis ###############################
-mybatis.type-aliases-package=com.seasonsfood.mall.servicemap.api.domain
+mybatis.type-aliases-package=com.seasonsfood.mall.map.api.domain
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
