--- a/service-business/pom.xml
+++ b/service-business/pom.xml
@@ -86,7 +86,10 @@
             <artifactId>service-business-api</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--quartz-->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
